# wemod-launcher

./: .gitignore  LICENSE  README.md  USAGE.md  changelog.md  comit-release.sh  const_utils.py  consts.py  constutils.py  copier.py  core_nodeps.py  core_utils.py  corenodep.py  coreutils.py  default.nix  devenv.nix  devenv.yaml  flake.nix  main_utils.py  mainutils.py  org.deckcheatz.WemodLauncher.desktop  org.deckcheatz.WemodLauncher.json  prepare.py  pyproject.toml  readme.md  requirements.txt  setup  setup.bash  setup.py  shell.nix  util.py  wand  wemod  wemod-launcher.spec  wemod.bat  wemod~6b074f7 (refactor: Rename to Wand Launcher)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.bug-report.yml  bug_report.md  compat-report.yml  feature_request.md  feature_request.yaml  question_form.yml  user-issue.yml
.github/workflows/: black.yml
scripts/: build.sh  dev.sh  install-dependencies  launch-command  pdm.sh  run.sh  setup  shell.sh
src/: const_utils.py  consts.py  constutils.py  corenodep.py  coreutils.py  mainutils.py  prepare.py  requirements.txt  setup.py  update_check.py  wand.bat  wand.py  wemod.bat  wemod.py
src/wemod_launcher/: cli.py  const_utils.py  consts.py  core_nodeps.py  core_utils.py  main_utils.py  prepare.py  pyinstaller.py  wemod  wemod.py
src/wemod_launcher/gfx/: download_popup.py  welcome_screen.py
src/wemod_launcher/pfx/: wine_utils.py
src/wemod_launcher/utils/: configuration.py  consts.py  logger.py
tools/nix/: .envrc  default.nix  devenv.nix  shell.nix
wemod_launcher/: cli.py  const_utils.py  consts.py  core_nodeps.py  core_utils.py  main_utils.py  prepare.py  pyinstaller.py  pyproject.toml  wemod
wemod_launcher/gfx/: welcome_screen.py
wemod_launcher/pfx/: wine_utils.py
wemod_launcher/utils/: configuration.py  consts.py  logger.py
