[tool.poetry]
name = "wemod-launcher"
version = "2.000"
description = "Tool made to launch the popular Game Trainer / Cheat tool WeMod along with your game (made for steam-runtime version in Linux)."
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"] # TODO: Fix licensing and authors list.
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
freesimplegui = "5.1.0"
requests = "2.32.3"
pyxdg = "0.28"
setuptools = "*" # FIXME: Fails without this, needs lock.
pyinstaller = "^6.9.0"

[tool.poetry.scripts]
wemod-launcher = "wemod_launcher.cli:main"
package-exe = "wemod_launcher.pyinstaller:install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
